systemd: Throw a descriptive warning if badly setup

Instead of throwing:
GLib-GIO-CRITICAL: g_dbus_connection_call_internal: assertion 'object_path != NULL && g_variant_is_object_path (object_path)' failed
Throw a warning explaining why we got into this situation.

Experienced while working on gnome-settings-daemon's power test suite.
The new error message is more descriptive than the original
warning/assertion.

https://bugzilla.gnome.org/show_bug.cgi?id=781173